# ChikaEngine

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  ChikaProject.json  README.md  README_RESOURCE_MODERNIZATION.md  RESOURCE_LAYER_REFACTORING.md  RESOURCE_MODERNIZATION_SUMMARY.md  RESOURCE_POOL_IMPLEMENTATION_CHECKLIST.md  debug_pre_play.json  imgui.ini  pyproject.toml  test.json  vec.json
engine/: CMakeLists.txt  engine.cpp  engine.h
engine/Benchmark/: CMakeLists.txt
engine/Benchmark/src/: BenchmarkOptions.cpp  BenchmarkResult.cpp  BenchmarkRunner.cpp  BenchmarkSceneFactory.cpp  BenchmarkSceneLayout.cpp  JobBenchmark.cpp  ProfilerCompileDisabledBenchmark.cpp  ProfilerOverheadBenchmark.cpp  RenderCpuBenchmark.cpp  SampleStatistics.cpp  main.cpp
engine/Framework_old/src/component/: Collider.cpp  Rigidbody.cpp  ScriptComponent.cpp  Transform.cpp
engine/Framework_old/src/gameobject/: GameObject.cpp
engine/Framework_old/src/subsystem/: PhysicsSubsystem.cpp
engine/Game/: CMakeLists.txt
engine/Game/src/: main.cpp
engine/Resource_old/include/ChikaEngine/: MaterialImporter.h  ResourceSystem.h  ResourceTypes.h  ShaderImporter.h  TextureCubeImporter.h
engine/Runtime/: CMakeLists.txt
engine/Runtime/Asset/: CMakeLists.txt
engine/Runtime/Asset/src/: AnimationLoader.cpp  AssetDatabase.cpp  AssetImporter.cpp  AssetManager.cpp  MaterialLoader.cpp  MeshLoader.cpp  ShaderCompiler.cpp  ShaderLoader.cpp  ShaderReflection.cpp  ShaderTemplateLoader.cpp  TextureLoader.cpp
engine/Runtime/Core/: CMakeLists.txt
engine/Runtime/Framework/: CmakeLists.txt
engine/Runtime/Input/: CMakeLists.txt
engine/Runtime/Input/src/: GlfwInputBackend.cpp  GlfwKeyMap.cpp  InputSystem.cpp
engine/Runtime/Jobs/: CMakeLists.txt
engine/Runtime/Jobs/src/: JobProfiler.cpp  JobQueue.cpp  JobStorage.cpp  JobSystem.cpp
engine/Runtime/Physics/: CMakeLists.txt
engine/Runtime/Platform/: CMakeLists.txt
engine/Runtime/Profiler/: CMakeLists.txt
engine/Runtime/Project/: CMakeLists.txt
engine/Runtime/RHI/: CMakeLists.txt
engine/Runtime/Render/: CMakeLists.txt
engine/Runtime/Resource/: CMakeLists.txt
engine/Runtime/Scripts/: CMakeLists.txt
engine/Runtime/Time/: CMakeLists.txt
engine/cmake/: reflection.cmake
engine/core/: CMakeLists.txt
engine/core/debug/: ChikaDebug.h  assert.cpp  assert.h  console_sink.cpp  console_sink.h  debug.h  editor_sink.cpp  editor_sink.h  file_sink.cpp  file_sink.h  log_macros.h  log_system.cpp  log_system.h
engine/core/function/: test.cpp
engine/core/math/: ChikaMath.h  mat4.cpp  mat4.h  quaternion.cpp  quaternion.h  vector2.cpp  vector3.cpp  vector3.h  vector4.cpp
engine/core/reflection/: ReflectionData.h  ReflectionMacros.h  TypeRegister.h
engine/editor/: CMakeLists.txt  main.cpp
engine/editor/include/: CommandManager.h  Editor.h  EditorContext.hpp  EditorGizmoRenderer.hpp  EditorManager.hpp  ICommand.h  IEditorPanel.h  IEditorPanel.hpp  IEditorUI.h  InspectorPanel.hpp  LogPanel.hpp  ProfilerTimelineModel.hpp  ProfilerTimelinePanel.hpp  RenderStatisticsPanel.hpp  SceneHierarchyPanel.hpp  ViewportPanel.hpp  VulkanAdapter.hpp
engine/editor/src/: CommandManager.cpp  Editor.cpp  EditorGizmoRenderer.cpp  EditorManager.cpp  InspectorPanel.cpp  LogPanel.cpp  ProfilerTimelineModel.cpp  ProfilerTimelinePanel.cpp  RenderStatisticsPanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp  VulkanAdapter.cpp  main.cpp
engine/editor_old/: CMakeLists.txt
engine/editor_old/include/: Editor.h  ICommand.h  IEditorPanel.h  IEditorUI.h
engine/editor_old/src/: main.cpp
engine/framework/: CmakeLists.txt  GameObject.cpp  GameObject.h
engine/framework/component/: Component.h  MeshRenderer.h  Renderable.cpp  Renderable.h  Transform.cpp  Transform.h
engine/framework/gameobject/: GameObject.cpp  GameObject.h
engine/framework/scene/: scene.cpp  scene.h
engine/framework/temp/: a.h
engine/include/ChikaEngine/: Application.hpp  EngineContext.hpp
engine/input/: CMakeLists.txt  GlfwInputBackend.cpp  GlfwInputBackend.h  GlfwKeyMap.cpp  GlfwKeyMap.h  IInputBackend.h  InputSystem.cpp  InputSystem.h
engine/physics/: CMakeLists.txt
engine/physics/include/: Collider.h  IPhysicsBackend.h  JoltLayer.h  PhysicsDescs.h  PhysicsJoltBackend.h  PhysicsSystem.h  Rigidbody.h
engine/physics/src/: Collider.cpp  PhysicsJoltBackend.cpp  PhysicsSystem.cpp  Rigidbody.cpp
engine/platform/: CMakeLists.txt  window_system.cpp  window_system.h
engine/platform/window/: window_desc.h  window_factory.cpp  window_system.h
engine/render/: CMakeLists.txt  camera.cpp  camera.h  color.h  material.h  meshdata.h  render.h  render_api.h  render_device.h  renderer.cpp  renderer.h  renderobject.h  shader_source.h
engine/render/Resource/: Material.h  MaterialPool.cpp  MaterialPool.h  Mesh.h  MeshLibrary.cpp  MeshLibrary.h  MeshPool.cpp  MeshPool.h  Shader.h  ShaderPool.cpp  ShaderPool.h  Texture.h  TexturePool.cpp  TexturePool.h
engine/render/rhi/: RHIDevice.h  RHIResources.h  RHITypes.h
engine/render_old/: CMakeLists.txt
engine/render_old/src/: Gizmo.cpp  renderer.cpp
engine/resource_importer/: CMakeLists.txt
engine/resource_importer/include/: MaterialImporter.h  MeshImporter.h  ResourceSystem.h  TextureImporter.h
engine/resource_importer/src/: ResourceSystem.cpp
engine/src/: Application.cpp  EngineContext.cpp
engine/time/: CMakeLists.txt  GlfwTimeBackend.cpp  ITimeBackend.h  TimeBackendFactory.h  TimeDesc.h  TimeSystem.cpp  TimeSystem.h
engine/tools/reflector/: README.md  gen_id.py  parser.py  pyproject.toml  register.py
tests/: CMakeLists.txt
tests/cmake/: RuntimeBoundaryCheck.cmake
tests/integration/: AssetJobIntegrationTests.cpp  AssetPipelineTests.cpp  SceneIntegrationTests.cpp
tests/stress/: JobStealingStressTests.cpp
tests/unit/: BenchmarkTests.cpp  CoreBoundaryTests.cpp  JobSystemTests.cpp  ProfilerDisabledMacroTests.cpp  ProfilerTests.cpp  ProfilerTimelineModelTests.cpp  ProjectDescriptorTests.cpp  RenderBaselineTests.cpp  RenderPhase3Tests.cpp  RenderPhase4Tests.cpp  ShaderInterfaceTests.cpp
(+649 files in other folders)
