set(TARGET_NAME ChikaPlatform)

set(CURRENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# 收集所有头文件和源文件
file(GLOB_RECURSE PLATFORM_HEADER_FILES "${CURRENT_DIR}/*.h")
file(GLOB_RECURSE PLATFORM_SOURCE_FILES "${CURRENT_DIR}/*.cpp")

# IDE 分组
source_group(TREE "${CURRENT_DIR}" FILES ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES})

# 创建库
add_library(${TARGET_NAME} STATIC ${PLATFORM_HEADER_FILES} ${PLATFORM_SOURCE_FILES})

target_include_directories(${TARGET_NAME}
    PUBLIC
    ${CURRENT_DIR}
)
target_link_libraries(${TARGET_NAME}
    PUBLIC
        ChikaThirdParty
)
